hamburger menu - no longer overlaps with hero section title on smaller viewports

--- a/assets/sass/_menus.scss
+++ b/assets/sass/_menus.scss
@@ -3,10 +3,13 @@
 .menu-toggle {
   display: block;
   position: relative;
-  top: 50px;
+  top: 25px;
   z-index: 1;
   -webkit-user-select: none;
   user-select: none;
+  @include vars.breakpoint(medium) {
+    top: 50px;
+  }
   a {
     text-decoration: none;
     color: white;
@@ -94,7 +97,10 @@
   z-index: 3;
   .menu-toggle {
     position: fixed;
-    right: 0;
+    right: -25px;
+    @include vars.breakpoint(medium) {
+      right: 0;
+    }
     input {
       right: 50px;
     }
@@ -146,7 +152,7 @@
   left: 0;
   top: 0;
   &.active {
-    z-index: 1;
+    z-index: 2;
     opacity: 0.4;
   }
 }
